--- a/.github/workflows/onboard_repo.yml
+++ b/.github/workflows/onboard_repo.yml
@@ -109,6 +109,7 @@ jobs:
     if: github.event.action == 'opened' || github.event.action == 'edited'
     concurrency: 
       group: git
+      cancel-in-progress: false
     needs: 
     - parse-issue
     - url-validator
