--- a/.github/ISSUE_TEMPLATE/onboard_repo.yml
+++ b/.github/ISSUE_TEMPLATE/onboard_repo.yml
@@ -22,6 +22,7 @@ body:
     attributes:
       label: Related solution areas
       options:
+        - label: Hackathon
         - label: Infrastructure
         - label: Application Innovation
         - label: AI
